2008-04-12  Bruno coudoin  <bruno.coudoin@free.fr>

	Improved the windows version so that the administration module
	is available in the demo version.
	Now python activities can be part of the demo version and
	many are there now. There are now 47 activities in the demo
	out of 107, more than twice as before. (commit trunk 3362)

	* src/gcompris/board.c: (gc_board_init), (gc_board_check_file):
	* src/gcompris/gcompris.c: (get_board_to_start), (setup_window),
	(display_activation_dialog), (activation_done):

2008-02-12  Bruno coudoin  <bruno.coudoin@free.fr>

	merged from trunk 3231, 3232
	* src/gcompris/config.c: Added support for Urdu
	* boards/flags/ur.png: created

2008-04-06 Bruno coudoin  <bruno.coudoin@free.fr>

	Added support for Persan by Ehsan Nouri
	(commit trunk 3352)

	* configure.in:
	* src/gcompris/config.c:
	* global_win32.mak:
	* po/fa.po:
	* po/ChangeLog:


	*** RELEASE 8.5PRE1 ***

2008-03-23 Bruno coudoin  <bruno.coudoin@free.fr>

	* src/boards/memory.c: (get_random_token), (create_item): Patch from
	  Karl Ove Hufthammer to display 1 + 2 instead of 1+2 and make the text
	  being white. (commit 3335)

2008-03-16 Bruno coudoin  <bruno.coudoin@free.fr>

	- Major cleanup in goocanvas to keep only the minimal we need.
	- Integrated pygoocanvas. No more needed to install it separatly.
	- fixed the file selector background and its highlight button

	* configure.in:
	* src/anim-activity/anim.py:
	* src/boards/Makefile.am:
	* src/boards/py-mod-gcompris.c: (python_gcompris_module_init):
	* src/boards/python.c: (pythonboard_init):
	* src/connect4-2players-activity/init_path.sh:
	* src/draw-activity/init_path.sh:
	* src/gcompris/bar.c: (on_leave_notify), (item_event_bar):
	* src/gcompris/file_selector.c: (display_file_selector),
	(display_files):
	* src/gcompris/gameutil.c: (gc_item_focus_init):
	* src/gcompris/gcompris.c: (setup_window):
	* src/gcompris/gcompris_db.c: (gc_db_remove_board):
	* src/goocanvas/INSTALL:
	* src/goocanvas/Makefile.am: